Bug 1730834 - Don't stop animated images from nsDocumentViewer::Stop. r=smaug

We don't stop other animations and such, so seems weird to do it only
for animated images. This line comes from bug 70030, but we no longer
provide "Esc" as a shortcut for Stop(), so it's probably no longer
relevant for users.

Differential Revision: https://phabricator.services.mozilla.com/D125815